--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/ui": "^4.0",
         "laravelcollective/html": "^6.4",
         "livewire/livewire": "^3.5",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-medialibrary": "^10.7",
         "spatie/laravel-permission": "^5.9"
     },
